# libmumble

./: CMakeLists.txt  CryptState.cpp  client.cc  win_cmake_vc2008.bat  win_cmake_vc2010.bat  win_extract_includes.bat  win_make_build.bat
celt-build/: CMakeLists.txt  config.h
celt-build/win32/: config.h
src/: CryptState.cpp  CryptState.h  PacketDataStream.h  channel.h  client.cc  client.h  client_lib.cc  client_lib.h  libmumble_stdint.h  logging.cpp  logging.h  main.cc  messages.h  settings.h  user.h  visibility.h
